--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 } */
+
+
+body {
+  margin: 0;
+  padding: 0;
+  background: url('https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?q=80&w=1920&auto=format&fit=crop') no-repeat center center fixed; 
+  background-size: cover;
+  font-family: 'Segoe UI', sans-serif;
+}
